# embedded-nrf24l01

./: Cargo.toml  README.md
src/: config.rs  device.rs  lib.rs  rx.rs  standby.rs  tx.rs
