[package]
name = "embedded-nrf24l01-async"
version = "0.3.1"
authors = ["Astro <astro@spaceboyz.net>", "KisChang <feichang0609@gmail.com>"]
description = "A driver for NRF24L01(+) transceivers on embedded-hal-async platforms(base on embedded-nrf24l01)."
license = "Apache-2.0"
categories = ["embedded", "no-std", "hardware-support", "network-programming"]
keywords = ["driver", "embedded-hal-async", "wireless", "nrf", "nrf24l01"]
repository = "https://github.com/kischang/embedded-nrf24l01"
homepage = "https://github.com/kischang/embedded-nrf24l01"
edition = "2021"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
bitfield = "0.13.2"
nb = "0.1.2"
log = "0.4.22"
defmt = "0.3"
defmt-rtt = "0.4"